@@ -21,7 +21,9 @@ dependencies {
     testAnnotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:1.37");
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-
+    tasks.named<org.springframework.boot.gradle.tasks.run.BootRun>("bootRun"){
+        jvmArgs("--enable-preview")
+    }
 }
 
 
